--- a/navegacion/contacto.html
+++ b/navegacion/contacto.html
@@ -29,6 +29,38 @@
             }
             </script>
       </div>
+
+      <section  class="hecon">
+        <h2> En Groweb sabemos que el mejor diseño es el que mejor representa a nuestros clientes.
+        </h2></section>
+        <section class="hecon2">
+        <h2>¡No dudes en hacernos llegar tus consultas!</h2></section>
+        <div class="contact">
+            <div class="formulario" >      
+              <h3>¡Contactate con nosotros!</h3>
+                  <form action="submeter-formulario.php" method="post">       
+                        <label for="nombre" class="colocar_nombre"><span class="obligatorio"></span>
+                        </label>
+                        <input type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="* Nombre">
+                        <label for="email" class="colocar_email">
+                        <span class="obligatorio"></span>
+                        </label>
+                        <input type="email" name="introducir_email" id="email" required="obligatorio" placeholder="* Email">
+                        <label for="asunto" class="colocar_asunto">
+                        <span class="obligatorio"></span>
+                        </label>
+                        <input type="text" name="introducir_asunto" id="assunto" required="obligatorio" placeholder="* Asunto">
+                        <label for="mensaje" class="colocar_mensaje">
+                        <span class="obligatorio"></span>
+                        </label>                     
+                        <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio" placeholder="* Deja aquí tu comentario..."></textarea>                    
+                        <button type="submit" name="enviar_formulario" id="enviar" class="enva"><p>Enviar</p></button>
+                        <p class="aviso">
+                        <span class="obligatorio">*</span>los campos son obligatorios.
+                        </p>
+                  </form>
+            </div>  
+          </div>
 <footer class="posit-footer">
     <div class="footer">
         <section class="fut">
