--- a/navegacion/servicios.html
+++ b/navegacion/servicios.html
@@ -28,7 +28,79 @@
               }
             }
             </script>
-      </div>
+</div>
+<header class="hh-serv"> <h2>Creación constante.</h2></header>
+<main class="main-serv">
+<!---->
+<div class="box-comp">
+  <section class="sections-serv">
+    <h3> Desarrollo nativo </h3> 
+  </section>
+    <section class="sectopms-serv2">
+    <article>
+    Desarrollamos tu web a medida, con tus indicaciones.
+    </article>   
+    <article>
+    Incorporamos el software que solicites.
+   </article> 
+  </section>
+  <section class="bt-pos">
+  <button class="boton-serv"> Saber más!</button>
+</section>
+    </div>
+<!---->
+<div class="box-comp">
+  <section class="sections-serv">
+    <h3> Desarrollo nativo </h3> 
+  </section>
+    <section class="sectopms-serv2">
+    <article>
+    Desarrollamos tu web a medida, con tus indicaciones.
+    </article>   
+    <article>
+    Incorporamos el software que solicites.
+   </article> 
+  </section>
+  <section class="bt-pos">
+  <button class="boton-serv"> Saber más!</button>
+</section>
+    </div>
+<!---->
+<div class="box-comp">
+  <section class="sections-serv">
+    <h3> Desarrollo nativo </h3> 
+  </section>
+    <section class="sectopms-serv2">
+    <article>
+    Desarrollamos tu web a medida, con tus indicaciones.
+    </article>   
+    <article>
+    Incorporamos el software que solicites.
+   </article> 
+  </section>
+  <section class="bt-pos">
+  <button class="boton-serv"> Saber más!</button>
+</section>
+    </div>
+<!---->
+<div class="box-comp">
+  <section class="sections-serv">
+    <h3> Desarrollo nativo </h3> 
+  </section>
+    <section class="sectopms-serv2">
+    <article>
+    Desarrollamos tu web a medida, con tus indicaciones.
+    </article>   
+    <article>
+    Incorporamos el software que solicites.
+   </article> 
+  </section>
+  <section class="bt-pos">
+  <button class="boton-serv"> Saber más!</button>
+</section>
+    </div>
+<!---->
+</main>
 <footer class="posit-footer">
     <div class="footer">
         <section class="fut">
