--- a/navegacion/quienesSomos.html
+++ b/navegacion/quienesSomos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../style.css">
-    <title>Document</title>
+    <title>Quienes Somos | Groweb</title>
 </head>
 <body>
     <div class="topnav" id="myTopnav">
@@ -29,6 +29,44 @@
             }
             </script>
       </div>
+<!---->
+<header class="hd-qs">
+  <strong> Somos Groweb</strong>
+  <p>Somos un start-up dedicado a acercar la identidad digital a emprendedores y potenciar la funcionalidad de las empresas ya establecidas.
+
+  </p>
+</header>
+<div class="box-qs">  
+  <section class="sec-qs">
+  <h3> Tendencias en diseño</h3>
+<article>Nos enfocamos en impactar desde el diseño. Cuando damos inicio a nuevos proyectos
+  nos aseguramos de que nos encanta el boceto. Buscamos garantizar el atractivo desde el apartado visual.
+</article>
+  </section>
+  <section class="sec-qs">
+  <h3>Practicidad en el codigo</h3>  
+<article>Trabajamos en equipo. Desarrollamos nuevas soluciones para lograr
+  el mejor resultado posible en la menor cantidad de lineas de codigo. Agilizando los tiempos y 
+  asegurando el resultado.
+</article>
+  </section>
+  <section class="sec-qs">
+  <h3>Soluciones a medida</h3> 
+<article>Te escuchamos. En Groweb buscamos integrarnos al cliente para abordar sus 
+  necesidades desde el mejor lugar posible. 
+</article>
+  </section>
+  <section class="sec-qs">
+  <h3>Feedback constante</h3> 
+<article>¡Estamos a disposición!
+  Entendemos que el tiempo apremia. Nos comprometemos a brindar la mejor atención en el mantener
+  tiempo posible. Realizando evaluaciones periodicas.
+  ¡Aunque todo funcione bien!
+</article>
+  </section>
+</div>
+
+<!---->
 <footer class="posit-footer">
     <div class="footer">
         <section class="fut">
