desafio sass-seo 1/2

--- a/navegacion/nuestroTrabajo.html
+++ b/navegacion/nuestroTrabajo.html
@@ -29,6 +29,25 @@
             }
             </script>
       </div>
+
+      <div class="centrado">
+      <h4> texto de prueba para usar mixin </h4>
+<div class="cls-extend1">
+  Box de prueba para usar extend
+</div>
+<div class="cls-extend2">
+Primer extend
+</div>
+<div class="cls-extend3">
+  Extend con background
+</div>
+</div>
+<div class="centrado2">
+  <section class="secej">SECTION PRUEBA DE MAP 1</section>
+  <section class="secej">SECTION PRUEBA DE MAP 2</section>
+  <section class="secej">SECTION PRUEBA DE MAP 3</section>
+  <section class="secej">SECTION PRUEBA DE MAP 4</section>
+</div>
 <footer class="posit-footer">
     <div class="footer">
         <section class="fut">
