desafio sass-seo 2/2

--- a/navegacion/contacto.html
+++ b/navegacion/contacto.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../style.css">
-    <title>Document</title>
+    <meta name="contacto">
+    <title>Contacto | Groweb</title>
 </head>
 <body>
     <div class="topnav" id="myTopnav">
@@ -29,16 +30,15 @@
             }
             </script>
       </div>
-
-      <section  class="hecon">
-        <h2> En Groweb sabemos que el mejor diseño es el que mejor representa a nuestros clientes.
-        </h2></section>
-        <section class="hecon2">
-        <h2>¡No dudes en hacernos llegar tus consultas!</h2></section>
-        <div class="contact">
-            <div class="formulario" >      
-              <h3>¡Contactate con nosotros!</h3>
-                  <form action="submeter-formulario.php" method="post">       
+<section  class="hecon">
+      <h2> En Groweb sabemos que el mejor diseño es el que mejor representa a nuestros clientes.
+      </h2></section>
+      <section class="hecon2">
+      <h2>¡No dudes en hacernos llegar tus consultas!</h2></section>
+      <div class="contact">
+          <div class="formulario" >      
+            <h3>¡Contactate con nosotros!</h3>
+                <form action="submeter-formulario.php" method="post">       
                         <label for="nombre" class="colocar_nombre"><span class="obligatorio"></span>
                         </label>
                         <input type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="* Nombre">
@@ -61,13 +61,23 @@
                   </form>
             </div>  
           </div>
-<footer class="posit-footer">
+<footer id="parche" class="posit-footer">
     <div class="footer">
         <section class="fut">
         <a href=""><img class="fut-logo" src="../rsc/igicon.png" alt="logo-ig"></a>
         <a href=""><img class="fut-logo" src="../rsc/twicon.png" alt="logo-tw"></a>
         <a href=""><img class="fut-logo" src="../rsc/wpicon.png" alt="logo-wp"></a>
         </section>
+        <nav class="navfut">
+          <section class="navhead">
+          Navegación.
+          </section>
+          <a href="">Home</a>
+          <a href="">Servicios</a>
+          <a href="">Quienes Somos</a>
+          <a href="">Nuestro trabajo</a>
+          <a href="">Contacto</a>
+      </nav>
         <section class="bt-cnt">
         <a href="">¡Contactanos!</a>
         </section>
