--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Groweb | Desarrollo web </title>
+    <meta name="description" content="Creacion de sitios web, desarrolo web">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="desarrollo, sitios, web, pagina web, html, wordpress">
+    <meta name="author" content="Francisco Cuello">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -32,7 +36,7 @@
 <main class="main-home">
 <header class="header-home">
     <section class="sec1">
-    <h1>Desarrollo Web</h1>   
+    <h1> Desarrollo de sitios web </h1>   
     <strong> ¿Estás buscando un buen diseño para tu página web? </strong>
     </section>
 </header>
@@ -66,6 +70,16 @@
     <a href=""><img class="fut-logo" src="./rsc/twicon.png" alt="logo-tw"></a>
     <a href=""><img class="fut-logo" src="./rsc/wpicon.png" alt="logo-wp"></a>
     </section>
+    <nav class="navfut">
+        <section class="navhead">
+        Navegación.
+        </section>
+        <a href="">Home</a>
+        <a href="">Servicios</a>
+        <a href="">Quienes Somos</a>
+        <a href="">Nuestro trabajo</a>
+        <a href="">Contacto</a>
+    </nav>
     <section class="bt-cnt">
     <a href="">¡Contactanos!</a>
     </section>
