--- a/navegacion/nuestroTrabajo.html
+++ b/navegacion/nuestroTrabajo.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../style.css">
-    <title>Document</title>
+    <meta name="description" content="Nuestro trabajo en el mundo del desarrollo - portfolio">
+    <title>Nuestro trabajo | Groweb </title>
 </head>
 <body>
     <div class="topnav" id="myTopnav">
@@ -55,6 +56,16 @@ Primer extend
         <a href=""><img class="fut-logo" src="../rsc/twicon.png" alt="logo-tw"></a>
         <a href=""><img class="fut-logo" src="../rsc/wpicon.png" alt="logo-wp"></a>
         </section>
+        <nav class="navfut">
+          <section class="navhead">
+          Navegación.
+          </section>
+          <a href="">Home</a>
+          <a href="">Servicios</a>
+          <a href="">Quienes Somos</a>
+          <a href="">Nuestro trabajo</a>
+          <a href="">Contacto</a>
+      </nav>
         <section class="bt-cnt">
         <a href="">¡Contactanos!</a>
         </section>
