--- a/navegacion/quienesSomos.html
+++ b/navegacion/quienesSomos.html
@@ -31,41 +31,44 @@
             </script>
       </div>
 <!---->
-<header class="hd-qs">
-  <strong> Somos Groweb</strong>
-  <p>Somos un start-up dedicado a acercar la identidad digital a emprendedores y potenciar la funcionalidad de las empresas ya establecidas.
-
-  </p>
-</header>
-<div class="box-qs">  
-  <section class="sec-qs">
-  <h3> Tendencias en diseño</h3>
-<article>Nos enfocamos en impactar desde el diseño. Cuando damos inicio a nuevos proyectos
-  nos aseguramos de que nos encanta el boceto. Buscamos garantizar el atractivo desde el apartado visual.
-</article>
+<main class="main-qs">
+  <header class="header-qs">
+  <h2>Dejamos que nuestro trabajo hable por nosotros. </h2>
+    <p>Te presentamos algunos de los proyectos en los que estuvimos trabajando: </p>
+  </header>
+  <div class="cards-qs">
+  <section class="card">
+  <article class="art-img"><img class="art-nt-img" src="../rsc/mockup.jpg" alt=""> </article>
+  <article class="art-tit">TITULO</article>
+  <article class="art-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati architecto voluptates dolore in iusto, sapiente blanditiis corporis? Labore sed deserunt atque possimus est voluptatum at beatae? Animi quod obcaecati inventore.</article>
   </section>
-  <section class="sec-qs">
-  <h3>Practicidad en el codigo</h3>  
-<article>Trabajamos en equipo. Desarrollamos nuevas soluciones para lograr
-  el mejor resultado posible en la menor cantidad de lineas de codigo. Agilizando los tiempos y 
-  asegurando el resultado.
-</article>
+  <section class="card">
+    <article class="art-img"><img class="art-nt-img" src="../rsc/mockup.jpg" alt=""> </article>
+    <article class="art-tit">TITULO</article>
+    <article class="art-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati architecto voluptates dolore in iusto, sapiente blanditiis corporis? Labore sed deserunt atque possimus est voluptatum at beatae? Animi quod obcaecati inventore.</article>
+    </section>
+    <section class="card">
+      <article class="art-img"><img class="art-nt-img" src="../rsc/mockup.jpg" alt=""> </article>
+      <article class="art-tit">TITULO</article>
+      <article class="art-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati architecto voluptates dolore in iusto, sapiente blanditiis corporis? Labore sed deserunt atque possimus est voluptatum at beatae? Animi quod obcaecati inventore.</article>
+      </section>
+  <section class="card">
+  <article class="art-img"><img class="art-nt-img" src="../rsc/mockup.jpg" alt=""> </article>
+  <article class="art-tit">TITULO</article>
+  <article class="art-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati architecto voluptates dolore in iusto, sapiente blanditiis corporis? Labore sed deserunt atque possimus est voluptatum at beatae? Animi quod obcaecati inventore.</article>
   </section>
-  <section class="sec-qs">
-  <h3>Soluciones a medida</h3> 
-<article>Te escuchamos. En Groweb buscamos integrarnos al cliente para abordar sus 
-  necesidades desde el mejor lugar posible. 
-</article>
-  </section>
-  <section class="sec-qs">
-  <h3>Feedback constante</h3> 
-<article>¡Estamos a disposición!
-  Entendemos que el tiempo apremia. Nos comprometemos a brindar la mejor atención en el mantener
-  tiempo posible. Realizando evaluaciones periodicas.
-  ¡Aunque todo funcione bien!
-</article>
-  </section>
-</div>
+  <section class="card">
+    <article class="art-img"><img class="art-nt-img" src="../rsc/mockup.jpg" alt=""> </article>
+    <article class="art-tit">TITULO</article>
+    <article class="art-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati architecto voluptates dolore in iusto, sapiente blanditiis corporis? Labore sed deserunt atque possimus est voluptatum at beatae? Animi quod obcaecati inventore.</article>
+    </section>
+    <section class="card">
+      <article class="art-img"><img class="art-nt-img" src="../rsc/mockup.jpg" alt=""> </article>
+      <article class="art-tit">TITULO</article>
+      <article class="art-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati architecto voluptates dolore in iusto, sapiente blanditiis corporis? Labore sed deserunt atque possimus est voluptatum at beatae? Animi quod obcaecati inventore.</article>
+      </section>
+  </div>
+  </main>
 <!---->
 <footer class="posit-footer">
     <div class="footer">
@@ -76,7 +79,7 @@
         </section>
         <nav class="navfut">
           <section class="navhead">
-          Navegación.
+          Navegación
           </section>
           <a href="">Home</a>
           <a href="">Servicios</a>
