--- a/navegacion/servicios.html
+++ b/navegacion/servicios.html
@@ -112,7 +112,7 @@
         </section>
         <nav class="navfut">
           <section class="navhead">
-          Navegación.
+          Navegación
           </section>
           <a href="">Home</a>
           <a href="">Servicios</a>
