--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </section>
     <nav class="navfut">
         <section class="navhead">
-        Navegación.
+        Navegación
         </section>
         <a href="">Home</a>
         <a href="">Servicios</a>
