--- a/navegacion/contacto.html
+++ b/navegacion/contacto.html
@@ -70,7 +70,7 @@
         </section>
         <nav class="navfut">
           <section class="navhead">
-          Navegación.
+          Navegación
           </section>
           <a href="">Home</a>
           <a href="">Servicios</a>
