que boludo que soy

--- a/navegacion/servicios.html
+++ b/navegacion/servicios.html
@@ -28,7 +28,7 @@
                 x.className = "topnav";
               }
             }
-            </script>
+</script>
 </div>
 <header class="hh-serv"> <h2>Creación constante.</h2></header>
 <main class="main-serv">
@@ -101,6 +101,9 @@
 </section>
     </div>
 <!---->
+<div class="usandomixin">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum perferendis error accusamus ratione corporis similique perspiciatis nobis necessitatibus maxime! Deleniti blanditiis voluptatibus quia eius! Incidunt adipisci nihil dolore voluptates atque.</p>
+</div>
 </main>
 
 <footer class="posit-footer">
